--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             </div>
         </nav>
         <div class="header__content">
-            <h1 class="header__content-title">Amazing Shop Layouts</h1>
+            <h1 class="header__content-title">github
+            </h1>
             <p class="header__content-text">Grayson Collection</p>
             <a href="" class="header__content-link">SHOP NOW</a>
         </div>
